--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ Jinja2==3.1.4
 MarkupSafe==3.0.2
 numpy==1.25.2
 pandas==2.1.0
+psycopg2-binary==2.9.10
 pydantic==1.10.7
 python-dateutil==2.8.2
 python-dotenv==1.0.0
@@ -23,6 +24,7 @@ PyYAML==6.0
 requests==2.32.3
 six==1.16.0
 sniffio==1.3.0
+SQLAlchemy==2.0.36
 starlette==0.41.3
 typing_extensions==4.12.2
 tzdata==2023.3
