--- a/.env
+++ b/.env
@@ -3,8 +3,15 @@
 # Environment setting
 ENV=development
 
-# External database URL (used in local development)
-EXTERNAL_DB_URL=postgresql://crypto_currency_db_cb60_user:FJ9tobXuAcfpjoe3MpBShtz6zr1esXW9@dpg-ctsdo4tumphs73flrbr0-a.oregon-postgres.render.com/crypto_currency_db_cb60
 
-# Internal database URL (not used locally but kept for consistency)
-INTERNAL_DB_URL=postgresql://crypto_currency_db_cb60_user:FJ9tobXuAcfpjoe3MpBShtz6zr1esXW9@dpg-ctsdo4tumphs73flrbr0-a/crypto_currency_db_cb60
+### Render's PostgreSQL DB
+# # External database URL (used in local development)
+# EXTERNAL_DB_URL=postgresql://crypto_currency_db_cb60_user:FJ9tobXuAcfpjoe3MpBShtz6zr1esXW9@dpg-ctsdo4tumphs73flrbr0-a.oregon-postgres.render.com/crypto_currency_db_cb60
+
+# # Internal database URL (not used locally but kept for consistency)
+# INTERNAL_DB_URL=postgresql://crypto_currency_db_cb60_user:FJ9tobXuAcfpjoe3MpBShtz6zr1esXW9@dpg-ctsdo4tumphs73flrbr0-a/crypto_currency_db_cb60
+
+### Supabase PostgreSQL DB
+PSQL_CMD = "psql -h db.ocejkqvmwchksbeujgrk.supabase.co -p 5432 -d postgres -U postgres"
+INTERNAL_DB_URL = "postgresql://postgres:J83027::11S@db.ocejkqvmwchksbeujgrk.supabase.co:5432/postgres"
+EXTERNAL_DB_URL = "postgresql://postgres:J83027::11S@db.ocejkqvmwchksbeujgrk.supabase.co:5432/postgres"
