--- a/.env
+++ b/.env
@@ -13,5 +13,7 @@ ENV=development
 
 ### Supabase PostgreSQL DB
 PSQL_CMD = "psql -h db.ocejkqvmwchksbeujgrk.supabase.co -p 5432 -d postgres -U postgres"
-INTERNAL_DB_URL = "postgresql://postgres:J83027::11S@db.ocejkqvmwchksbeujgrk.supabase.co:5432/postgres"
-EXTERNAL_DB_URL = "postgresql://postgres:J83027::11S@db.ocejkqvmwchksbeujgrk.supabase.co:5432/postgres"
+# INTERNAL_DB_URL = "postgresql://postgres:J83027::11S@db.ocejkqvmwchksbeujgrk.supabase.co:5432/postgres"
+# EXTERNAL_DB_URL = "postgresql://postgres:J83027::11S@db.ocejkqvmwchksbeujgrk.supabase.co:5432/postgres"
+INTERNAL_DB_URL = "postgresql://postgres:J83027::11S@db.ocejkqvmwchksbeujgrk.supabase.co:6543/postgres?sslmode=require"
+EXTERNAL_DB_URL = "postgresql://postgres:J83027::11S@db.ocejkqvmwchksbeujgrk.supabase.co:6543/postgres?sslmode=require"
