--- a/.env
+++ b/.env
@@ -15,5 +15,5 @@ ENV=development
 PSQL_CMD = "psql -h db.ocejkqvmwchksbeujgrk.supabase.co -p 5432 -d postgres -U postgres"
 # INTERNAL_DB_URL = "postgresql://postgres:J83027::11S@db.ocejkqvmwchksbeujgrk.supabase.co:5432/postgres"
 # EXTERNAL_DB_URL = "postgresql://postgres:J83027::11S@db.ocejkqvmwchksbeujgrk.supabase.co:5432/postgres"
-INTERNAL_DB_URL = "postgresql://postgres:J83027::11S@db.ocejkqvmwchksbeujgrk.supabase.co:5432/postgres?sslmode=require"
-EXTERNAL_DB_URL = "postgresql://postgres:J83027::11S@db.ocejkqvmwchksbeujgrk.supabase.co:5432/postgres?sslmode=require"
+INTERNAL_DB_URL = "postgresql://postgres.ocejkqvmwchksbeujgrk:J83027::11S@aws-0-ap-south-1.pooler.supabase.com:5432/postgres"
+EXTERNAL_DB_URL = "postgresql://postgres.ocejkqvmwchksbeujgrk:J83027::11S@aws-0-ap-south-1.pooler.supabase.com:5432/postgres"
