--- a/.env
+++ b/.env
@@ -4,16 +4,14 @@
 ENV=development
 
 
-### Render's PostgreSQL DB
-# # External database URL (used in local development)
-# EXTERNAL_DB_URL=postgresql://crypto_currency_db_cb60_user:FJ9tobXuAcfpjoe3MpBShtz6zr1esXW9@dpg-ctsdo4tumphs73flrbr0-a.oregon-postgres.render.com/crypto_currency_db_cb60
+## Render's PostgreSQL DB
+# External database URL (used in local development)
+EXTERNAL_DB_URL=postgresql://cryptocurrencyprodb_2_user:x2Nbj6K0YousQhsMr89uCAKWjrRdyx0q@dpg-cuhpjsqn91rc73c6bkn0-a.oregon-postgres.render.com/cryptocurrencyprodb_2
 
-# # Internal database URL (not used locally but kept for consistency)
-# INTERNAL_DB_URL=postgresql://crypto_currency_db_cb60_user:FJ9tobXuAcfpjoe3MpBShtz6zr1esXW9@dpg-ctsdo4tumphs73flrbr0-a/crypto_currency_db_cb60
+# Internal database URL (not used locally but kept for consistency)
+INTERNAL_DB_URL=postgresql://cryptocurrencyprodb_2_user:x2Nbj6K0YousQhsMr89uCAKWjrRdyx0q@dpg-cuhpjsqn91rc73c6bkn0-a/cryptocurrencyprodb_2
 
-### Supabase PostgreSQL DB
-PSQL_CMD = "psql -h db.ocejkqvmwchksbeujgrk.supabase.co -p 5432 -d postgres -U postgres"
-# INTERNAL_DB_URL = "postgresql://postgres:J83027::11S@db.ocejkqvmwchksbeujgrk.supabase.co:5432/postgres"
-# EXTERNAL_DB_URL = "postgresql://postgres:J83027::11S@db.ocejkqvmwchksbeujgrk.supabase.co:5432/postgres"
-INTERNAL_DB_URL = "postgresql://postgres.ocejkqvmwchksbeujgrk:J83027::11S@aws-0-ap-south-1.pooler.supabase.com:5432/postgres"
-EXTERNAL_DB_URL = "postgresql://postgres.ocejkqvmwchksbeujgrk:J83027::11S@aws-0-ap-south-1.pooler.supabase.com:5432/postgres"
+# ### Supabase PostgreSQL DB
+# PSQL_CMD = "psql -h db.ocejkqvmwchksbeujgrk.supabase.co -p 5432 -d postgres -U postgres"
+# INTERNAL_DB_URL = "postgresql://postgres.ocejkqvmwchksbeujgrk:J83027::11S@aws-0-ap-south-1.pooler.supabase.com:5432/postgres"
+# EXTERNAL_DB_URL = "postgresql://postgres.ocejkqvmwchksbeujgrk:J83027::11S@aws-0-ap-south-1.pooler.supabase.com:5432/postgres"
